--- a/docker/DockerFile
+++ b/docker/DockerFile
@@ -1,7 +1,4 @@
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y locales
+ENV LANG C.UTF-8
+ENV LC_ALL C.UTF-8
 
-RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
-    dpkg-reconfigure --frontend=noninteractive locales && \
-    update-locale LANG=en_US.UTF-8
-
-ENV LANG en_US.UTF-8 
+touch /working
